Bug 1003302: Implement ubi::Node::compartment. r=terrence